fix scrollbar

--- a/src/css/main.pre.css
+++ b/src/css/main.pre.css
@@ -108,7 +108,7 @@ hr {
 .card {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 48px);
   overflow-y: auto;
 }
 
